--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,6 +398,7 @@ header {
 
 	.hi_text_2 {
 		font-size: 19px;
+		text-align: justify;
 	}
 	.colortext {
 		font-size: 19px;
@@ -447,6 +448,7 @@ header {
 
 	.hi_text_2 {
 		font-size: 35px;
+		text-align: justify;
 	}
 	.colortext {
 		font-size: 35px;
