--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -390,34 +390,34 @@ header {
 	.hi_text {
 		display: flex;
 		flex-direction: column;
-		margin: 2px 0px;
+		margin: 0px;
 	}
 	.hi_text_1 {
-		font-size: 27px;
+		font-size: 23px;
 	}
 
 	.hi_text_2 {
-		font-size: 19px;
-		text-align: justify;
+		font-size: 18px;
+		text-align: left;
 	}
 	.colortext {
-		font-size: 19px;
+		font-size: 18px;
 	}
 	.hi_slider {
 		align-self: center;
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		padding: 10px 10px;
+		padding: 3px 10px;
 		align-content: center;
 	}
 	.hi_text_3 {
-		font-size: 19px;
-		margin-bottom: 5px;
+		font-size: 16px;
+		margin-bottom: 0px;
 	}
 	.hi_submit {
-		margin-bottom: 5px;
-		font-size: 22px;
+		margin-bottom: 3px;
+		font-size: 21px;
 		text-decoration: none;
 		padding: 0px 50px;
 		text-align: center;
